# rdocx

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
crates/recto/: Cargo.toml
crates/recto-cli/: Cargo.toml
crates/recto-cli/src/: commands.rs  main.rs
crates/recto-html/: Cargo.toml
crates/recto-html/src/: css.rs  emitter.rs  lib.rs  markdown.rs
crates/recto-layout/: Cargo.toml
crates/recto-layout/src/: block.rs  bundled_fonts.rs  engine.rs  error.rs  font.rs  input.rs  lib.rs  line.rs  output.rs  paginator.rs  style_resolver.rs  table.rs
crates/recto-opc/: Cargo.toml
crates/recto-opc/src/: content_types.rs  error.rs  lib.rs  package.rs  relationship.rs
crates/recto-oxml/: Cargo.toml
crates/recto-oxml/src/: borders.rs  core_properties.rs  document.rs  drawing.rs  error.rs  footnotes.rs  header_footer.rs  lib.rs  namespace.rs  numbering.rs  placeholder.rs  properties.rs  raw_xml.rs  shared.rs  styles.rs  table.rs  text.rs  theme.rs  units.rs
crates/recto-pdf/: Cargo.toml
crates/recto-pdf/src/: font.rs  image.rs  lib.rs  raster.rs  writer.rs
crates/recto-trace/: Cargo.toml
crates/recto-trace/src/: duration_serde.rs  feature_tag.rs  format.rs  ids.rs  layout_map.rs  lib.rs  loss.rs  lossy_mode.rs  node_map.rs  trace.rs
crates/recto-wasm/: Cargo.toml
crates/recto-wasm/src/: lib.rs
crates/recto/src/: document.rs  error.rs  length.rs  lib.rs  paragraph.rs  run.rs  style.rs  table.rs
crates/recto/tests/: integration_test.rs
scripts/: release.sh
