[package]
name = "recto-cli"
description = "CLI tool for inspecting, converting, and manipulating DOCX files"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "recto"
path = "src/main.rs"

[dependencies]
recto = { workspace = true }
recto-oxml = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
