[package]
name = "recto-oxml"
description = "WordprocessingML XML element types for OOXML"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
quick-xml = { workspace = true }
thiserror = { workspace = true }
itoa = { workspace = true }
regex = "1"
