[package]
name = "recto-wasm"
description = "WebAssembly bindings for recto — DOCX creation, reading, and conversion in the browser"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.93"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
recto-opc = { path = "../recto-opc" }
recto-oxml = { path = "../recto-oxml" }
recto-html = { path = "../recto-html" }
wasm-bindgen = "0.2"
js-sys = "0.3"
